@@ -78,6 +78,16 @@ BUG FIXES
         data.table. Fixed. Thanks to Dieter Menne for providing a reproducible
         example. Test added.
         
+    o   The internal row.names attribute of .SD (which exists for compatibility with
+        data.frame only) was not being updated for each group. This caused length errors 
+        when calling any non-data.table-aware package from j, by group, when that package
+        used length of row.names. Such as the recent update to ggplot2. Fixed.
+        
+    o   When grouped j consists of a print of an object (such as ggplot2), the print is now
+        masked to return NULL rather than the (large and irregular) object that ggplot2 now
+        returns since the recent update v0.9.0. Otherwise data.table tries to accumulate the
+        (albeit invisible) print object. The print mask is local to grouping, not generally. 
+        
         
 THANKS TO
 
